--- a/src/test/resources/com/example/demo/auth-view.fxml
+++ b/src/test/resources/com/example/demo/auth-view.fxml
@@ -8,21 +8,22 @@
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
-    <Label fx:id= "enter" text="Enter your data:"  styleClass="label-main"/>
+    <Button text="Admin" onAction="#admin" styleClass="button-2"/>
+    <Label fx:id="enter" text="Enter your data:" styleClass="label-main"/>
     <GridPane hgap="10" vgap="10">
         <padding>
             <Insets top="10" right="10" bottom="10" left="10"/>
         </padding>
         <children>
-            <Label  text="Course:" GridPane.columnIndex="0"
-                   GridPane.rowIndex="0" GridPane.halignment="RIGHT" styleClass="label-babel" />
-            <Label  text="Group:" GridPane.columnIndex="0"
+            <Label text="Course:" GridPane.columnIndex="0"
+                   GridPane.rowIndex="0" GridPane.halignment="RIGHT" styleClass="label-babel"/>
+            <Label text="Group:" GridPane.columnIndex="0"
                    GridPane.rowIndex="1" GridPane.halignment="RIGHT" styleClass="label-babel"/>
-            <Label  text="Surname:" GridPane.columnIndex="0"
+            <Label text="Surname:" GridPane.columnIndex="0"
                    GridPane.rowIndex="2" GridPane.halignment="RIGHT" styleClass="label-babel"/>
-            <TextField fx:id = "course" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-            <TextField fx:id = "group" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id = "surname" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="course" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+            <TextField fx:id="group" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+            <TextField fx:id="surname" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
 
         </children>
     </GridPane>
