--- a/src/test/resources/com/example/demo/table-attempts-view.fxml
+++ b/src/test/resources/com/example/demo/table-attempts-view.fxml
@@ -12,11 +12,13 @@
 
     <Button fx:id="back" text="Go back" onAction="#goBack" styleClass="button-2"/>
     <TableView fx:id="tableAttempts" layoutX="12.0" layoutY="62.0" prefHeight="325.0" prefWidth="145.0">
+        <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+        </columnResizePolicy>
         <columns>
-            <!-- Колонки таблицы -->
-            <TableColumn prefWidth="31" text="№" fx:id="idColumn" />
-            <TableColumn prefWidth="113" text="Passed" fx:id="passedColumn" />
-            <TableColumn prefWidth="113" text="Failed" fx:id="failedColumn" />
+            <TableColumn prefWidth="31" text="№" fx:id="idColumn"/>
+            <TableColumn prefWidth="113" text="Passed" fx:id="passedColumn"/>
+            <TableColumn prefWidth="113" text="Failed" fx:id="failedColumn"/>
         </columns>
     </TableView>
 </VBox>
