--- a/src/test/resources/com/example/demo/auth-view.fxml
+++ b/src/test/resources/com/example/demo/auth-view.fxml
@@ -4,30 +4,27 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <VBox alignment="CENTER" spacing="10.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx"
-      fx:controller="com.example.demo.controller.AuthController" stylesheets="@style.css">
+      fx:controller="com.example.demo.controller.AuthController" stylesheets="@css/style.css">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
     <Button text="Admin" onAction="#admin" styleClass="button-2"/>
-    <Label fx:id="enter" text="Enter your data:" styleClass="label-main"/>
+    <Label  text="Enter your data:" styleClass="label-main"/>
     <GridPane hgap="10" vgap="10">
         <padding>
             <Insets top="10" right="10" bottom="10" left="10"/>
         </padding>
-        <children>
+
             <Label text="Course:" GridPane.columnIndex="0"
-                   GridPane.rowIndex="0" GridPane.halignment="RIGHT" styleClass="label-babel"/>
+                   GridPane.rowIndex="0" GridPane.halignment="RIGHT" styleClass="label"/>
             <Label text="Group:" GridPane.columnIndex="0"
-                   GridPane.rowIndex="1" GridPane.halignment="RIGHT" styleClass="label-babel"/>
+                   GridPane.rowIndex="1" GridPane.halignment="RIGHT" styleClass="label"/>
             <Label text="Surname:" GridPane.columnIndex="0"
-                   GridPane.rowIndex="2" GridPane.halignment="RIGHT" styleClass="label-babel"/>
+                   GridPane.rowIndex="2" GridPane.halignment="RIGHT" styleClass="label"/>
             <TextField fx:id="course" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
             <TextField fx:id="group" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
             <TextField fx:id="surname" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-
-        </children>
     </GridPane>
-    <Button fx:id="mainButton" text="Click me!"
-            onAction="#onHelloButtonClick" styleClass="button-2"/>
+    <Button text="Click me!" onAction="#onHelloButtonClick" styleClass="button-2"/>
 </VBox>
 
