--- a/src/test/resources/com/example/demo/error-view.fxml
+++ b/src/test/resources/com/example/demo/error-view.fxml
@@ -7,20 +7,17 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
 <VBox alignment="CENTER" prefHeight="193.0" prefWidth="319.0" spacing="10.0"
-      stylesheets="@style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
+      stylesheets="@css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.example.demo.controller.ErrorController">
+
     <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
     </padding>
 
     <ImageView fitHeight="47.0" fitWidth="123.0" pickOnBounds="true" preserveRatio="true">
-        <image>
-            <Image url="@assets/error-icon.png"/>
-        </image>
+        <Image url="@assets/error-icon.png"/>
     </ImageView>
     <Label fx:id="errorMessage" styleClass="label-error"/>
     <Button graphicTextGap="0.0" mnemonicParsing="false" onAction="#errorMessage" prefHeight="10.0" prefWidth="266.0"
             styleClass="button-2" text="OK"/>
-
-
 </VBox>
