--- a/src/test/resources/com/example/demo/table-attempts-view.fxml
+++ b/src/test/resources/com/example/demo/table-attempts-view.fxml
@@ -5,12 +5,13 @@
 <?import javafx.scene.layout.VBox?>
 <VBox alignment="CENTER" spacing="10.0" xmlns=" http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.demo.controller.TableAttemptController" stylesheets="@style.css">
+      fx:controller="com.example.demo.controller.TableAttemptController" stylesheets="@css/style.css">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
-    <Button fx:id="back" text="Go back" onAction="#goBack" styleClass="button-2"/>
+    <Button text="Go back" onAction="#goBack" styleClass="button-2"/>
+
     <TableView fx:id="tableAttempts" layoutX="12.0" layoutY="62.0" prefHeight="325.0" prefWidth="145.0">
         <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
