--- a/src/test/resources/com/project/testapplication/test-case-admin-view.fxml
+++ b/src/test/resources/com/project/testapplication/test-case-admin-view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<VBox alignment="CENTER" spacing="10.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/19"
+<VBox alignment="CENTER" spacing="10.0" stylesheets="@css/style.css" xmlns="http://javafx.com/javafx/19"
       xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.testapplication.controller.AdminController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
