--- a/src/test/resources/com/project/testapplication/add-test-case-view.fxml
+++ b/src/test/resources/com/project/testapplication/add-test-case-view.fxml
@@ -3,7 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<VBox alignment="CENTER" prefHeight="400.0" prefWidth="335.0" spacing="10.0" stylesheets="@../css/style.css"
+<VBox alignment="CENTER" prefHeight="400.0" prefWidth="335.0" spacing="10.0" stylesheets="@css/style.css"
       xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.project.testapplication.controller.AddTestCaseController">
     <padding>
