--- a/src/test/resources/com/project/testapplication/table-attempts-view.fxml
+++ b/src/test/resources/com/project/testapplication/table-attempts-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.VBox?>
 <VBox alignment="CENTER" spacing="10.0" xmlns=" http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.project.testapplication.controller.TableAttemptController" stylesheets="@../css/style.css">
+      fx:controller="com.project.testapplication.controller.TableAttemptController" stylesheets="@css/style.css">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
