--- a/src/test/resources/com/project/testapplication/table-test-view.fxml
+++ b/src/test/resources/com/project/testapplication/table-test-view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<VBox alignment="CENTER" prefHeight="400.0" prefWidth="300.0" spacing="10.0" stylesheets="@../css/style.css"
+<VBox alignment="CENTER" prefHeight="400.0" prefWidth="300.0" spacing="10.0" stylesheets="@css/style.css"
       xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.project.testapplication.controller.TableTestController">
     <padding>
