--- a/src/test/resources/com/project/testapplication/add-test-case-view.fxml
+++ b/src/test/resources/com/project/testapplication/add-test-case-view.fxml
@@ -7,20 +7,20 @@
       xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.project.testapplication.controller.AddTestCaseController">
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <Insets bottom="10.0" left="20.0" right="20.0" top="10.0"/>
     </padding>
-    <Label styleClass="label-main" text="Enter test case:"/>
+    <Label styleClass="label-main" text="Введите тестируемое задание:"/>
     <GridPane hgap="10" vgap="10">
         <padding>
             <Insets bottom="10" left="10" right="10" top="10"/>
         </padding>
 
-        <Label styleClass="label" text="Title:" GridPane.columnIndex="0" GridPane.halignment="RIGHT"
+        <Label styleClass="label" text="Название:" GridPane.columnIndex="0" GridPane.halignment="RIGHT"
                GridPane.rowIndex="1"/>
-        <Label styleClass="label" text="Test Class Name:" GridPane.columnIndex="0" GridPane.halignment="RIGHT"
+        <Label styleClass="label" text="Тестируемый класс:" GridPane.columnIndex="0" GridPane.halignment="RIGHT"
                GridPane.rowIndex="2"/>
-        <TextField fx:id="title" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-        <TextField fx:id="testClass" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+        <TextField fx:id="title" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.halignment="LEFT" />
+        <TextField fx:id="testClass" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.halignment="LEFT"/>
 
         <columnConstraints>
             <ColumnConstraints/>
@@ -32,5 +32,5 @@
             <RowConstraints/>
         </rowConstraints>
     </GridPane>
-    <Button onAction="#saveTestCase" styleClass="button-2" text="Save"/>
+    <Button onAction="#saveTestCase" styleClass="button-2" text="Сохранить"/>
 </VBox>
