--- a/src/test/resources/com/project/testapplication/css/style.css
+++ b/src/test/resources/com/project/testapplication/css/style.css
@@ -42,3 +42,11 @@
     -fx-opacity: 1;
     -fx-text-alignment: center;
 }
+
+.label-result-min{
+    -fx-font-size: 13pt;
+    -fx-font-family: "Segoe UI Semibold";
+    -fx-text-fill: rgba(171, 4, 4, 0.7);
+    -fx-opacity: 1;
+    -fx-text-alignment: center;
+}
