--- a/src/test/resources/com/project/testapplication/table-attempts-view.fxml
+++ b/src/test/resources/com/project/testapplication/table-attempts-view.fxml
@@ -10,7 +10,11 @@
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
-    <Button text="Go back" onAction="#goBack" styleClass="button-2"/>
+    <Button text="Назад" onAction="#goBack" styleClass="button-2"/>
+    <VBox alignment="CENTER" spacing="10.0">
+        <Label  fx:id="student" styleClass="label-result-min"/>
+        <Label fx:id="testTask" styleClass="label-result-min"/>
+    </VBox>
 
     <TableView fx:id="tableAttempts" layoutX="12.0" layoutY="62.0" prefHeight="325.0" prefWidth="145.0">
         <columnResizePolicy>
@@ -18,8 +22,8 @@
         </columnResizePolicy>
         <columns>
             <TableColumn prefWidth="31" text="№" fx:id="idColumn"/>
-            <TableColumn prefWidth="113" text="Passed" fx:id="passedColumn"/>
-            <TableColumn prefWidth="113" text="Failed" fx:id="failedColumn"/>
+            <TableColumn prefWidth="113" text="Пройдено" fx:id="passedColumn"/>
+            <TableColumn prefWidth="113" text="Провалено" fx:id="failedColumn"/>
         </columns>
     </TableView>
 </VBox>
