--- a/src/test/resources/com/project/testapplication/table-test-view.fxml
+++ b/src/test/resources/com/project/testapplication/table-test-view.fxml
@@ -11,20 +11,23 @@
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
-    <Button onAction="#goBack" styleClass="button-2" text="Go back"/>
+    <Button onAction="#goBack" styleClass="button-2" text="Назад"/>
 
     <HBox alignment="CENTER" spacing="10.0">
-        <Label text="Passed:" styleClass="label-result"/>
+        <Label text="Пройдено:" styleClass="label-result"/>
         <Label fx:id="numberPassed" styleClass="label-result"/>
-        <Label text="Failed:" styleClass="label-result"/>
+    </HBox>
+
+    <HBox alignment="CENTER" spacing="10.0">
+        <Label text="Провалено:" styleClass="label-result"/>
         <Label fx:id="numberFailed" styleClass="label-result"/>
     </HBox>
 
     <TableView fx:id="tableResult" layoutX="12.0" layoutY="62.0" prefHeight="325.0" prefWidth="145.0">
         <columns>
             <TableColumn fx:id="idColumn" prefWidth="31" text="№"/>
-            <TableColumn fx:id="nameColumn" prefWidth="128" text="Name"/>
-            <TableColumn fx:id="resultColumn" prefWidth="98" text="Result"/>
+            <TableColumn fx:id="nameColumn" prefWidth="128" text="Тест"/>
+            <TableColumn fx:id="resultColumn" prefWidth="98" text="Результат"/>
         </columns>
     </TableView>
 </VBox>
