--- a/src/test/resources/com/project/testapplication/test-case-admin-view.fxml
+++ b/src/test/resources/com/project/testapplication/test-case-admin-view.fxml
@@ -11,8 +11,8 @@
     </padding>
 
     <HBox alignment="CENTER" spacing="10.0">
-        <Button onAction="#goBack" styleClass="button-2" text="Go back"/>
-        <Button onAction="#refresh" styleClass="button-2" text="Update"/>
+        <Button onAction="#goBack" styleClass="button-2" text="Назад"/>
+        <Button onAction="#refresh" styleClass="button-2" text="Обновить"/>
     </HBox>
 
     <TableView fx:id="testCaseTable" prefWidth="250.0">
@@ -20,14 +20,14 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
         </columnResizePolicy>
         <columns>
-            <TableColumn fx:id="title" prefWidth="100." text="Title"/>
-            <TableColumn fx:id="testClass" prefWidth="150." text="Test Class Name"/>
+            <TableColumn fx:id="title" prefWidth="100." text="Название"/>
+            <TableColumn fx:id="testClass" prefWidth="150." text="Класс"/>
         </columns>
     </TableView>
 
     <HBox alignment="CENTER" spacing="10.0">
-        <Button onAction="#addTestCase" styleClass="button-2" text="ADD"/>
-        <Button onAction="#deleteTestCase" styleClass="button-2" text="DELETE"/>
+        <Button onAction="#addTestCase" styleClass="button-2" text="Добавить"/>
+        <Button onAction="#deleteTestCase" styleClass="button-2" text="Удалить"/>
     </HBox>
 
 </VBox>
